# vaulthalla

./: .gitignore  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  README.md  ai.yml  meson.build  meson.options  package.json  requirements.txt
.codex/context/: debian-bin-lifecycle-audit.md  debian-packaging-lifecycle.md  deploy-packaging.md  index.md  release-tooling.md
.codex/scratch/: debian-install-and-cli-tools.md  release-changelog-roadmap.md
.github/actions/build_web/: action.yml
.github/actions/package/: action.yml
.github/workflows/: release.yml
core/: .gitignore  meson.build
core/include/db/: DBConnection.hpp
core/include/runtime/: Deps.hpp
core/include/share/: AuditEvent.hpp  EmailChallenge.hpp  Grant.hpp  Link.hpp  Manager.hpp  Principal.hpp  RateLimiter.hpp  Session.hpp  TargetResolver.hpp  Token.hpp  Types.hpp  Upload.hpp
core/main/: cli.cpp
core/seed/src/: seed_db.cpp
core/src/db/: Connection.cpp  Janitor.cpp
core/src/fuse/: Resolver.cpp
core/src/share/: AuditEvent.cpp  EmailChallenge.cpp  Grant.cpp  Link.cpp  Manager.cpp  Principal.cpp  RateLimiter.cpp  Session.cpp  TargetResolver.cpp  Token.cpp  Types.cpp  Upload.cpp
core/tests/unit/: gtest_main.cpp  test_glob_path.cpp  test_http_share_preview.cpp  test_session_manager_refresh.cpp  test_share_domain.cpp  test_share_fs_resolution.cpp  test_share_manager.cpp  test_share_principal_rbac.cpp  test_share_queries.cpp  test_share_rate_limiter.cpp  test_share_token.cpp  test_ws_share_download.cpp  test_ws_share_fs.cpp  test_ws_share_links.cpp  test_ws_share_sessions.cpp  test_ws_share_upload.cpp
debian/: README.Debian  changelog  install  postinst  postrm  rules
deploy/config/: config.yaml
deploy/lifecycle/: main.py
deploy/nginx/: vaulthalla.conf
deploy/psql/: 030_vault_waivers.sql  060_acl.sql  070_link_shares.sql  071_link_share_vault_roles.sql  072_share_vault_role_assignments.sql
deploy/systemd/: vaulthalla-swtpm.service.in  vaulthalla-web.service.in
docs/contributors/: ai-assisted-contributions.md  development-setup.md  packaging-and-release.md
include/auth/: Manager.hpp  SessionManager.hpp
include/auth/model/: Client.hpp  RefreshToken.hpp  Token.hpp  TokenPair.hpp
include/auth/session/: Issuer.hpp  Manager.hpp  Validator.hpp
include/db/encoding/: has.hpp
include/fuse/: Bridge.hpp
include/fuse/resolver/: Request.hpp
include/identities/: Group.hpp  User.hpp
include/protocols/ws/: ConnectionLifecycleManager.hpp  Session.hpp
include/rbac/permission/: Admin.hpp  Override.hpp  Vault.hpp
include/rbac/resolver/: Admin.hpp  Permission.hpp  Vault.hpp
include/rbac/role/: Admin.hpp  Vault.hpp
include/rbac/vault/: Resolver.hpp
include/runtime/: Manager.hpp
include/sync/model/: Waiver.hpp
seed/src/: seed_db.cpp
src/auth/: Manager.cpp  SessionManager.cpp
src/auth/model/: RefreshToken.cpp  Token.cpp
src/auth/session/: Issuer.cpp  Manager.cpp  Validator.cpp
src/components/admin/: AdminPage.tsx
src/components/fs/: Filesystem.client.tsx
src/components/roles/: FullSizeRowCard.tsx  RoleCard.tsx  RoleEditor.tsx  RoleForm.tsx  RolePermissionsForm.tsx  RolesComponent.tsx
src/config/: Config.cpp
src/fuse/: Bridge.cpp  Resolver.cpp
src/identities/: Group.cpp  User.cpp
src/identities/model/: User.cpp
src/models/: role.ts  user.ts
src/protocols/ws/: ConnectionLifecycleManager.cpp  Handler.cpp  Router.cpp  Session.cpp
src/rbac/glob/: Tokenizer.cpp
src/rbac/permission/: Admin.cpp  Override.cpp  (+2 more)
src/runtime/: Deps.cpp  Manager.cpp
src/storage/: Engine.cpp  Manager.cpp
src/stores/: authStore.ts  permissionStore.ts  useWebSocket.ts
src/util/: webSocketCommands.ts
tests/unit/: test_permission_export.cpp
tools/dev/: share_preview_smoke.mjs
tools/release/: __init__.py  categorize.py  cli.py  git.py
web/: middleware.ts  package.json  pnpm-lock.yaml
(+431 files in other folders)
